[PRM-2354] Moved header outside outside radios and date pages (#424)
* [PRM-2354] Moved header outside out radio on cancel vat page

* Revert "[PRM-2354] Moved header outside out radio on cancel vat page"

This reverts commit 74840180

* [PRM-2354] [WIP] Updated radio and pageHeader component

* [PRM-2354] Updated tests for new formatting

* [PRM-2354] Updated input date component for fieldset

* [PRM-2354] Removed legendasheading from date input

* [PRM-2354] Renamed showPenaltyInformation in inputDate as legendasheading

* [PRM-2354] Replaced legend with h1 in Reasonable Excuse Page Spec

--- a/app/views/PenaltySelectionPage.scala.html
+++ b/app/views/PenaltySelectionPage.scala.html
@@ -36,7 +36,7 @@
   optPageMode = Some(pageMode)
 ) {
 
-  @pageHeader(messages("penaltySelection.headingAndTitle"))
+  @pageHeader(Some(messages("penaltySelection.headingAndTitle")))
   <p class="govuk-body">@messages("penaltySelection.p1")</p>
   @bullets(
     Seq(
@@ -51,7 +51,7 @@
       form = form,
       legendContent = messages("penaltySelection.form.heading"),
       items = radioOptions,
-      showPenaltyInformation = false,
+      legendAsPageHeading = false,
       legendClasses = "govuk-fieldset__legend govuk-fieldset__legend--m"
     )
     @button("common.continue")
