--- a/app/views/reasonableExcuseJourneys/lossOfStaff/WhenDidThePersonLeaveBusinessPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/lossOfStaff/WhenDidThePersonLeaveBusinessPage.scala.html
@@ -20,6 +20,7 @@
         bullets: components.bullets,
         formHelper: FormWithCSRF,
         button: components.button,
+        pageHeader: components.pageHeader,
         dateInput: components.inputDate)
 
 @(form: Form[_], postAction: Call, pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
@@ -30,13 +31,12 @@
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
     @formHelper(action = postAction) {
-
+    @pageHeader()
         @dateInput(
             form = form,
             legendContent = messages("lossOfStaffReason.headingAndTitle"),
-            legendClasses = Some("govuk-fieldset__legend--xl"),
-            hintText = Some(messages("lossOfStaffReason.hintText") + messages("whenDidEventHappen.hint")),
-            legendAsPageHeading = true
+            legendClasses = Some("govuk-fieldset__legend--l"),
+            hintText = Some(messages("lossOfStaffReason.hintText") + messages("whenDidEventHappen.hint"))
         )
 
         @button("common.continue")
