--- a/app/views/components/inputDate.scala.html
+++ b/app/views/components/inputDate.scala.html
@@ -24,21 +24,11 @@
         legendClasses: Option[String] = None,
         id: String = "date",
         hintText: Option[String] = None,
-        showPenaltyInformation: Boolean = true,
-        legendAsPageHeading: Boolean = false)(implicit messages: Messages, userRequest: UserRequest[_], appConfig: AppConfig)
+        legendAsHeading: Boolean = true)(implicit messages: Messages, userRequest: UserRequest[_], appConfig: AppConfig)
 
 @legend = {
-  <h1 class="govuk-fieldset__heading">
-    <span class="govuk-caption-l penalty-information-caption" id="penalty-information">
-      @{
-        messages("penaltyInformation.headerText",
-          PenaltyTypeHelper.getKeysFromSession().get.head,
-          PenaltyTypeHelper.getKeysFromSession().get(1),
-          PenaltyTypeHelper.getKeysFromSession().get.last
-        )
-      }
-    </span>
-    <span class="govuk-heading-l govuk-!-margin-bottom-0" id="page-heading">@legendContent</span>
+  <h1 class="govuk-fieldset__heading" id ="page-heading">
+    @legendContent
   </h1>
 }
 
@@ -46,7 +36,7 @@
   fieldset = Some(Fieldset(
     legend = Some(
       Legend(
-        content = if(showPenaltyInformation) HtmlContent(legend) else Text(legendContent),
+        content = if(legendAsHeading) HtmlContent(legend) else Text(legendContent),
         isPageHeading = false,
         classes = legendClasses.getOrElse("")
       )
