--- a/app/views/components/radios.scala.html
+++ b/app/views/components/radios.scala.html
@@ -27,22 +27,13 @@
         legendClasses: String = "",
         inline: Boolean = false,
         formFieldId: String = "value",
-        showPenaltyInformation: Boolean = true
+        legendAsPageHeading: Boolean = true
 )(implicit messages: Messages, userRequest: UserRequest[_], appConfig: AppConfig)
 
 @legend = {
-  <h1 class="govuk-fieldset__heading">
-    <span class="govuk-caption-l penalty-information-caption" id="penalty-information">
-      @{
-        messages("penaltyInformation.headerText",
-          PenaltyTypeHelper.getKeysFromSession().get.head,
-          PenaltyTypeHelper.getKeysFromSession().get(1),
-          PenaltyTypeHelper.getKeysFromSession().get.last
-        )
-      }
-    </span>
-    <span class="govuk-heading-l govuk-!-margin-bottom-0" id="page-heading">@legendContent</span>
-  </h1>
+    <h1 class="govuk-fieldset__heading" id ="page-heading">
+        @legendContent
+    </h1>
 }
 
 @govukRadios(Radios(
@@ -54,7 +45,7 @@
   name = formFieldId,
   fieldset = Some(Fieldset(
     legend = Some(Legend(
-      content = if(showPenaltyInformation) HtmlContent(legend) else Text(legendContent),
+      content = if(legendAsPageHeading) HtmlContent(legend) else Text(legendContent),
       isPageHeading = false,
       classes = if(legendClasses.nonEmpty) legendClasses else "govuk-fieldset__legend--xl"
     ))
