--- a/app/views/reasonableExcuseJourneys/crime/HasCrimeBeenReportedToPolicePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/crime/HasCrimeBeenReportedToPolicePage.scala.html
@@ -20,6 +20,7 @@
         bullets: components.bullets,
         formHelper: FormWithCSRF,
         button: components.button,
+        pageHeader: components.pageHeader,
         radios: components.radios)
 
 @(form: Form[_], radioOptions: Seq[RadioItem], postAction: Call, pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
@@ -29,11 +30,14 @@
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
+    @pageHeader()
     @formHelper(action = postAction) {
         @radios(
             form = form,
             legendContent = messages("crimeReason.hasBeenReported.headingAndTitle"),
-            items = radioOptions
+            items = radioOptions,
+            legendClasses = "govuk-fieldset__legend--l",
+            legendAsPageHeading = true
         )
 
         @button("common.continue")
