--- a/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
@@ -20,6 +20,7 @@
 @this(layout: Layout,
         formHelper: FormWithCSRF,
         button: components.button,
+        pageHeader: components.pageHeader,
         dateInput: components.inputDate)
 
 @(form: Form[_], postAction: Call, pageMode: PageMode)(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
@@ -30,13 +31,12 @@
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
     @formHelper(action = postAction) {
-
+    @pageHeader()
         @dateInput(
             form = form,
             legendContent = messages(getMessageKeyForPage("whenDidBecomeUnable.headingAndTitle")),
-            legendClasses = Some("govuk-fieldset__legend--xl"),
-            hintText = Some(messages("whenDidEventHappen.hint")),
-            legendAsPageHeading = true
+            legendClasses = Some("govuk-fieldset__legend--l"),
+            hintText = Some(messages("whenDidEventHappen.hint"))
         )
 
         @button("common.continue")
