PRM-2470 made accessibility fix to address lack of notification for file upload service

--- a/app/views/components/upload/uploadItem.scala.html
+++ b/app/views/components/upload/uploadItem.scala.html
@@ -27,7 +27,7 @@
             <div class="multi-file-upload__meta-container">
                 <div class="multi-file-upload__status">
                     <span class="multi-file-upload__progress">
-                        <span class="multi-file-upload__progress-bar" role="status"></span>
+                        <span class="multi-file-upload__progress-bar"></span>
                     </span>
                     <span class="multi-file-upload__uploaded-tag govuk-tag">@messages("otherReason.uploadEvidence.status.uploaded")</span>
                     <span class="multi-file-upload__waiting-tag govuk-tag govuk-tag--grey">@messages("otherReason.uploadEvidence.status.pending")</span>
