--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -83,7 +83,7 @@
         (Symbol("data-multi-file-upload-error-url-tpl"), getErrorServiceUrl.url),
         (Symbol("data-multi-file-upload-still-transferring"), messages("otherReason.uploadEvidence.stillTransferring")),
         (Symbol("data-multi-file-upload-error-generic"), messages("upscan.unableToUpload", "{fileNumber}")),
-        (Symbol("data-multi-file-upload-file-uploading"), messages("upscan.fileUploading", "{fileNumber}", "{fileName}")),
+        (Symbol("data-multi-file-upload-file-uploading"), messages("upscan.fileUploading", "{fileNumber}")),
         (Symbol("data-multi-file-upload-new-upload-row"), messages("upscan.addedNewRow")),
         (Symbol("data-multi-file-upload-number-uploaded-files"), messages("upscan.numberOfUploadedFiles", "{numberOfFiles}")),
         (Symbol("data-multi-file-upload-one-file-uploaded"), messages("upscan.uploadedOneFile", "{numberOfFiles}")),
@@ -102,7 +102,7 @@
 
             <button type="button" class="multi-file-upload__add-another govuk-button govuk-button--secondary">@messages("otherReason.uploadEvidence.addAnother")</button>
 
-            <p class="govuk-body multi-file-upload__form-status hidden" aria-hidden="true">
+            <p class="govuk-body multi-file-upload__form-status hidden">
                 @messages("otherReason.uploadEvidence.stillTransferring")...
                 <span class="file-upload__spinner ccms-loader"></span>
             </p>
