[PRM-2477] - Added you cannot go back to appeal details page

--- a/app/views/errors/ServiceUnavailablePage.scala.html
+++ b/app/views/errors/ServiceUnavailablePage.scala.html
@@ -16,7 +16,7 @@
 
 @this(layout: Layout)
 
-@()(implicit userRequest: UserRequest[_], messages: Messages, appConfig: config.AppConfig)
+@()(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
 
 @layout(
     pageTitle = messages("serviceUnavailable.headingAndTitle"),
