PRM-2480 fixed unit tests

--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -43,7 +43,7 @@
                         @row.value
                     </dd>
                     <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="@row.url" @if(row.isUploadRow) {id="upload-row"}>@messages("checkYourAnswers.change.text") <span class="govuk-visually-hidden"> @messages("checkYourAnswers.change.visuallyHidden", row.key)></span>
+                        <a class="govuk-link" href="@row.url" @if(row.isUploadRow) {id="upload-row"}>@messages("checkYourAnswers.change.text") <span class="govuk-visually-hidden"> @messages("checkYourAnswers.change.visuallyHidden", row.key)</span>
                         </a>
                     </dd>
                 </div>
