PRM-2480 updated change link to have govuk visually hidden (#453)
* PRM-2480 updated change link to have govuk visually hidden

* PRM-2480 changed welsh message

* PRM-2480 fixed unit tests

* PRM-2480 addressed duplicate change text

* PRM-2480 testing isolated text now

--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -43,7 +43,8 @@
                         @row.value
                     </dd>
                     <dd class="govuk-summary-list__actions">
-                        <a class="govuk-link" href="@row.url" aria-label="@messages("checkYourAnswers.change.ariaLabel", row.key)" @if(row.isUploadRow) {id="upload-row"}>@messages("checkYourAnswers.change.text")</a>
+                        <a class="govuk-link" href="@row.url" @if(row.isUploadRow) {id="upload-row"}>@messages("checkYourAnswers.change.text") <span class="govuk-visually-hidden"> @messages("checkYourAnswers.change.visuallyHidden", row.key)</span>
+                        </a>
                     </dd>
                 </div>
         }
