PRM-2520 added new CSP to our service

--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -16,6 +16,7 @@
 
 @import config.AppConfig
 @import models.appeals.CheckYourAnswersRow
+@import views.html.helper.CSPNonce
 
 @this(layout: Layout,
         bullets: components.bullets,
@@ -58,13 +59,5 @@
         @button("common.acceptAndSend")
     }
 
-    <script>
-            document.addEventListener('DOMContentLoaded', function() {
-              console.log('JavaScript is enabled');
-              const backLink = document.getElementById('back-link');
-              backLink.setAttribute('href', backLink.getAttribute('href').replace('&isJsEnabled=false', '') + '&isJsEnabled=true');
-              const changeLinkForUpload = document.getElementById('upload-row');
-              changeLinkForUpload.setAttribute('href', changeLinkForUpload.getAttribute('href').replace('isJsEnabled=false', '') + 'isJsEnabled=true');
-            });
-    </script>
+    <script @{CSPNonce.attr} src='@controllers.routes.Assets.versioned("javascripts/backLinkCYA.js")'></script>
 }
