--- a/app/views/MakingALateAppealPage.scala.html
+++ b/app/views/MakingALateAppealPage.scala.html
@@ -17,6 +17,8 @@
 @import config.AppConfig
 @import viewtils.PenaltyTypeHelper
 @import utils.SessionKeys
+@import views.html.helper.CSPNonce
+
 
 @this(layout: Layout,
         link: components.link,
@@ -52,10 +54,4 @@
   }
 }
 
-<script>
-        document.addEventListener('DOMContentLoaded', function () {
-          console.log('JavaScript is enabled');
-          const backLink = document.getElementById('back-link');
-          backLink.setAttribute('href', backLink.getAttribute('href').replace('&isJsEnabled=false', '') + '&isJsEnabled=true');
-        });
-</script>
+<script @{CSPNonce.attr} src='@controllers.routes.Assets.versioned("javascripts/backLinkLateAppeal.js")'></script>
