--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -22,9 +22,15 @@
         link: components.link,
         button: components.button,
         formHelper: FormWithCSRF,
+        warningText: components.warningText,
         pageHeader: components.pageHeader)
 
 @(contentToDisplayInSummaryList: Seq[CheckYourAnswersRow], pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
+
+@warningTextContent = {
+  <p class="govuk-!-margin-top-0 govuk-!-margin-bottom-0">@messages("checkYourAnswers.declaration.p1")</p>
+  <p class="govuk-!-margin-top-0">@messages("checkYourAnswers.declaration.p2")</p>
+}
 
 @layout(pageTitle = messages("checkYourAnswers.headingAndTitle"),
     isPageFullWidth = false,
@@ -51,11 +57,7 @@
     </dl>
 
     <h2 class="govuk-heading-m" id="declaration">@messages("checkYourAnswers.declaration.h2")</h2>
-    <p class="govuk-body govuk-!-padding-bottom-2">
-        @messages("checkYourAnswers.declaration.p1")
-        <br>
-        @messages("checkYourAnswers.declaration.p2")
-    </p>
+    @warningText(warningTextContent, componentClasses = "govuk-!-margin-bottom-2")
 
     @formHelper(action = controllers.routes.CheckYourAnswersController.onSubmit()) {
         @button("common.acceptAndSend")
