[PRM-2528] - Remove 'p' tags in 'strong' element

--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -27,11 +27,6 @@
 
 @(contentToDisplayInSummaryList: Seq[CheckYourAnswersRow], pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
 
-@warningTextContent = {
-  <p class="govuk-!-margin-top-0 govuk-!-margin-bottom-0">@messages("checkYourAnswers.declaration.p1")</p>
-  <p class="govuk-!-margin-top-0">@messages("checkYourAnswers.declaration.p2")</p>
-}
-
 @layout(pageTitle = messages("checkYourAnswers.headingAndTitle"),
     isPageFullWidth = false,
     optPageMode = Some(pageMode)) {
@@ -57,7 +52,7 @@
     </dl>
 
     <h2 class="govuk-heading-m" id="declaration">@messages("checkYourAnswers.declaration.h2")</h2>
-    @warningText(warningTextContent, componentClasses = "govuk-!-margin-bottom-2")
+    @warningText(Html(messages("checkYourAnswers.declaration.text")), componentClasses = "govuk-!-margin-bottom-4")
 
     @formHelper(action = controllers.routes.CheckYourAnswersController.onSubmit()) {
         @button("common.acceptAndSend")
