--- a/app/views/reasonableExcuseJourneys/lossOfStaff/WhenDidThePersonLeaveBusinessPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/lossOfStaff/WhenDidThePersonLeaveBusinessPage.scala.html
@@ -21,6 +21,7 @@
         formHelper: FormWithCSRF,
         button: components.button,
         pageHeader: components.pageHeader,
+        p: components.p,
         dateInput: components.inputDate)
 
 @(form: Form[_], postAction: Call, pageMode: PageMode)(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
@@ -30,16 +31,20 @@
     formHasErrors = form.errors.nonEmpty,
     formErrors = form.errors,
     optPageMode = Some(pageMode)) {
-    @formHelper(action = postAction) {
-    @pageHeader()
-        @dateInput(
-            form = form,
-            legendContent = messages("lossOfStaffReason.headingAndTitle"),
-            legendClasses = Some("govuk-fieldset__legend--l"),
-            hintText = Some(messages("lossOfStaffReason.hintText") + messages("whenDidEventHappen.hint"))
-        )
 
-        @button("common.continue")
-    }
+  @pageHeader(Some(messages("lossOfStaffReason.headingAndTitle")))
+
+  @p(Html(messages("lossOfStaffReason.hintText")))
+
+  @formHelper(action = postAction) {
+      @dateInput(
+          form = form,
+          legendContent = messages("lossOfStaffReason.headingAndTitle"),
+          legendClasses = Some("govuk-fieldset__legend--l govuk-visually-hidden"),
+          hintText = Some(messages("whenDidEventHappen.hint")),
+          legendAsHeading = false
+      )
+      @button("common.continue")
+  }
 
 }
