--- a/app/views/layouts/Layout.scala.html
+++ b/app/views/layouts/Layout.scala.html
@@ -18,10 +18,10 @@
 @import uk.gov.hmrc.hmrcfrontend.views.html.components._
 @import uk.gov.hmrc.hmrcfrontend.views.html.helpers._
 @import views.html.layouts.GovUkPageLayout
+@import views.html.helper.CSPNonce
 
 @this(
         govukLayout: GovUkPageLayout,
-        head: Head,
         hmrcTimeoutDialog: HmrcTimeoutDialog,
         header: components.Header,
         hmrcTrackingConsentSnippet: HmrcTrackingConsentSnippet,
@@ -53,9 +53,13 @@
 }
 
 @headBlock = {
-    @head(
-        if(showSignOut) {
-            Some(hmrcTimeoutDialog(TimeoutDialog(
+<!--[if lte IE 8]><script @{CSPNonce.attr} src='@controllers.routes.Assets.versioned("javascripts/html5shiv.min.js")'></script><![endif]-->
+<!--[if lte IE 8]><link href='@controllers.routes.Assets.versioned("stylesheets/application-ie-8.css")' rel="stylesheet" type="text/css" /><![endif]-->
+<!--[if gt IE 8]><!--><link href='@controllers.routes.Assets.versioned("stylesheets/application.css")' media="all" rel="stylesheet" type="text/css" /><!--<![endif]-->
+<script @{CSPNonce.attr} src='@controllers.routes.Assets.versioned("lib/govuk-frontend/govuk/all.js")'></script>
+<script @{CSPNonce.attr} src='@controllers.routes.Assets.versioned("lib/hmrc-frontend/hmrc/all.js")'></script>
+        @if(showSignOut) {
+            @hmrcTimeoutDialog(TimeoutDialog(
                 language = Some(messages.lang.code),
                 timeout = Some(appConfig.timeoutPeriod),
                 countdown = Some(appConfig.timeoutCountdown),
@@ -63,18 +67,19 @@
                 timeoutUrl = Some(routes.TimeoutController.onPageLoad().url),
                 keepAliveUrl = Some("#"),
                 signOutButtonText = Some(messages("base.signOut"))
-            )))
-        } else None
-    )
+            ))
+        } else { None
+}
+
     @hmrcTrackingConsentSnippet()
 
 }
 
 @scripts = {
 @if(scriptsBlock.isEmpty) {
-    @customJavaScript.map {x => <script src='@controllers.routes.Assets.versioned(s"javascripts/$x")'></script> }
-    <script>window.GOVUKFrontend.initAll();</script>
-    <script>window.HMRCFrontend.initAll();</script>
+    @customJavaScript.map {x => <script @{CSPNonce.attr} src='@controllers.routes.Assets.versioned(s"javascripts/$x")'></script> }
+    <script @{CSPNonce.attr}> window.GOVUKFrontend.initAll();</script>
+    <script @{CSPNonce.attr}>window.HMRCFrontend.initAll();</script>
 } else {
     @scriptsBlock.get
 }}
