--- a/app/views/components/inputDate.scala.html
+++ b/app/views/components/inputDate.scala.html
@@ -46,21 +46,21 @@
   items = Seq(
     InputItem(
       id = s"$id.day",
-      classes = s"govuk-input--width-2 ${if(form(s"$id.day").hasErrors || form.errors.exists(_.args.contains("day")) || form.errors.exists(_.args.contains("diwrnod"))) "govuk-input--error" else ""}",
+      classes = s"govuk-input--width-2 ${if(form(s"$id.day").hasErrors || form.errors.exists(_.args.contains(messages("date.day").toLowerCase))) "govuk-input--error" else ""}",
       name = s"$id.day",
       label = Some(messages("date.day")),
       value = form(s"$id.day").value
     ),
     InputItem(
       id = s"$id.month",
-      classes = s"govuk-input--width-2 ${if(form(s"$id.month").hasErrors || form.errors.exists(_.args.contains("month")) || form.errors.exists(_.args.contains("mis"))) "govuk-input--error" else ""}",
+      classes = s"govuk-input--width-2 ${if(form(s"$id.month").hasErrors || form.errors.exists(_.args.contains(messages("date.month").toLowerCase))) "govuk-input--error" else ""}",
       name = s"$id.month",
       label = Some(messages("date.month")),
       value = form(s"$id.month").value
     ),
     InputItem(
       id = s"$id.year",
-      classes = s"govuk-input--width-4 ${if(form(s"$id.year").hasErrors || form.errors.exists(_.args.contains("year")) || form.errors.exists(_.args.contains("blwyddyn")) ) "govuk-input--error" else ""}",
+      classes = s"govuk-input--width-4 ${if(form(s"$id.year").hasErrors || form.errors.exists(_.args.contains(messages("date.year").toLowerCase))) "govuk-input--error" else ""}",
       name = s"$id.year",
       label = Some(messages("date.year")),
       value = form(s"$id.year").value
