PRM-2655-1 added some tests for exceptions

--- a/app/views/AppealConfirmationPage.scala.html
+++ b/app/views/AppealConfirmationPage.scala.html
@@ -20,7 +20,7 @@
 @import utils.SessionKeys
 @import models.PenaltyTypeEnum
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         bullets: components.bullets,
         link: components.link)
 
