--- a/app/views/CheckYourAnswersPage.scala.html
+++ b/app/views/CheckYourAnswersPage.scala.html
@@ -18,7 +18,7 @@
 @import models.appeals.CheckYourAnswersRow
 @import views.html.helper.CSPNonce
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         bullets: components.bullets,
         link: components.link,
         button: components.button,
