--- a/app/views/HonestyDeclarationPage.scala.html
+++ b/app/views/HonestyDeclarationPage.scala.html
@@ -17,7 +17,7 @@
 @import config.AppConfig
 @import utils.SessionKeys
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         link: components.link,
         button: components.button,
         formHelper: FormWithCSRF,
