--- a/app/views/agents/WhoPlannedToSubmitVATReturnAgentPage.scala.html
+++ b/app/views/agents/WhoPlannedToSubmitVATReturnAgentPage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         formHelper: FormWithCSRF,
         button: components.button,
         pageHeader: components.pageHeader,
