--- a/app/views/errors/IncompleteSessionDataPage.scala.html
+++ b/app/views/errors/IncompleteSessionDataPage.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @this(
-        layout: FrontendPageLayout,
+        layout: Layout,
         link: components.link,
         pageHeader: components.pageHeader
 )
