--- a/app/views/errors/ProblemWithServicePage.scala.html
+++ b/app/views/errors/ProblemWithServicePage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@this(layout: FrontendPageLayout)
+@this(layout: Layout)
 
 @()(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
 
