--- a/app/views/errors/YouCannotGoBackToAppealPage.scala.html
+++ b/app/views/errors/YouCannotGoBackToAppealPage.scala.html
@@ -15,7 +15,7 @@
  *@
 
 @this(
-        layout: FrontendPageLayout,
+        layout: Layout,
         bullets: components.bullets,
         link: components.link,
         p: components.p
