--- a/app/views/obligation/AppealByLetterKickOutPage.scala.html
+++ b/app/views/obligation/AppealByLetterKickOutPage.scala.html
@@ -16,7 +16,7 @@
 
 @import config.AppConfig
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         bullets: components.bullets,
         link: components.link,
         pageHeader: components.pageHeader,
