--- a/app/views/obligation/OtherRelevantInformationPage.scala.html
+++ b/app/views/obligation/OtherRelevantInformationPage.scala.html
@@ -19,7 +19,7 @@
 @import viewtils.PenaltyTypeHelper
 
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         bullets: components.bullets,
         formHelper: FormWithCSRF,
         button: components.button,
