--- a/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidencePage.scala.html
@@ -19,7 +19,7 @@
 @import views.html.components.upload.uploadItem
 @import views.html.partials.errorManager
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         formHelper: FormWithCSRF,
         govukFileUpload: GovukFileUpload,
         button: components.button,
