--- a/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/UploadEvidenceQuestionPage.scala.html
@@ -18,7 +18,7 @@
 @import views.html.helper.CSPNonce
 
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
        bullets: components.bullets,
        formHelper: FormWithCSRF,
        button: components.button,
