--- a/app/views/reasonableExcuseJourneys/other/WhyReturnSubmittedLatePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhyReturnSubmittedLatePage.scala.html
@@ -18,7 +18,7 @@
 @import utils.SessionKeys
 @import viewtils.PenaltyTypeHelper
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         link: components.link,
         button: components.button,
         characterCount: components.characterCount,
