--- a/app/views/AppealCoverBothPenaltiesPage.scala.html
+++ b/app/views/AppealCoverBothPenaltiesPage.scala.html
@@ -16,7 +16,7 @@
 
 @import config.AppConfig
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
       pageHeader: components.pageHeader,
       link: components.link
 )
