--- a/app/views/AppealSinglePenaltyPage.scala.html
+++ b/app/views/AppealSinglePenaltyPage.scala.html
@@ -18,7 +18,7 @@
 @import utils.SessionKeys
 
 @this(
-        layout: FrontendPageLayout,
+        layout: Layout,
         link: components.link,
         pageHeader: components.pageHeader
 )
