--- a/app/views/AppealStartPage.scala.html
+++ b/app/views/AppealStartPage.scala.html
@@ -18,7 +18,7 @@
 @import utils.SessionKeys
 
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         bullets: components.bullets,
         link: components.link,
         pageHeader: components.pageHeader)
