--- a/app/views/CancelVATRegistrationPage.scala.html
+++ b/app/views/CancelVATRegistrationPage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
 bullets: components.bullets,
 formHelper: FormWithCSRF,
 pageHeader: components.pageHeader,
