--- a/app/views/ErrorTemplate.scala.html
+++ b/app/views/ErrorTemplate.scala.html
@@ -16,7 +16,7 @@
 
 @import config.AppConfig
 
-@this(layout: FrontendPageLayout)
+@this(layout: Layout)
 
 @(pageTitle: String, heading: String, message: String)(implicit userRequest: Request[_], messages: Messages, appConfig: AppConfig)
 @layout(pageTitle = pageTitle, backLinkEnabled = false) {
