--- a/app/views/MakingALateAppealPage.scala.html
+++ b/app/views/MakingALateAppealPage.scala.html
@@ -20,7 +20,7 @@
 @import views.html.helper.CSPNonce
 
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         link: components.link,
         button: components.button,
         characterCount: components.characterCount,
