--- a/app/views/PenaltySelectionPage.scala.html
+++ b/app/views/PenaltySelectionPage.scala.html
@@ -18,7 +18,7 @@
 @import utils.SessionKeys
 
 @this(
-        layout: FrontendPageLayout,
+        layout: Layout,
         bullets: components.bullets,
         formHelper: FormWithCSRF,
         button: components.button,
