--- a/app/views/ReasonableExcuseSelectionPage.scala.html
+++ b/app/views/ReasonableExcuseSelectionPage.scala.html
@@ -17,7 +17,7 @@
 @import config.AppConfig
 @import utils.SessionKeys
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         bullets: components.bullets,
         formHelper: FormWithCSRF,
         button: components.button,
