--- a/app/views/TimeoutPage.scala.html
+++ b/app/views/TimeoutPage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@this(layout: FrontendPageLayout)
+@this(layout: Layout)
 
 @()(implicit messages: Messages, request: Request[_], appConfig: AppConfig)
 
