--- a/app/views/agents/WhatCausedYouToMissTheDeadlinePage.scala.html
+++ b/app/views/agents/WhatCausedYouToMissTheDeadlinePage.scala.html
@@ -16,7 +16,7 @@
 
 @import config.AppConfig
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         formHelper: FormWithCSRF,
         button: components.button,
         pageHeader: components.pageHeader,
