--- a/app/views/errors/Unauthorised.scala.html
+++ b/app/views/errors/Unauthorised.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@this(layout: FrontendPageLayout)
+@this(layout: Layout)
 
 @()(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
