--- a/app/views/obligation/YouCannotAppealPage.scala.html
+++ b/app/views/obligation/YouCannotAppealPage.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
 link: components.link,
 formHelper: FormWithCSRF,
 pageHeader: components.pageHeader)
