--- a/app/views/reasonableExcuseJourneys/crime/HasCrimeBeenReportedToPolicePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/crime/HasCrimeBeenReportedToPolicePage.scala.html
@@ -16,7 +16,7 @@
 
 @import config.AppConfig
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         bullets: components.bullets,
         formHelper: FormWithCSRF,
         button: components.button,
