--- a/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/WhenDidBecomeUnablePage.scala.html
@@ -17,7 +17,7 @@
 @import config.AppConfig
 @import helpers.WhenDidYouBecomeUnableHelper.getMessageKeyForPage
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         formHelper: FormWithCSRF,
         button: components.button,
         pageHeader: components.pageHeader,
