--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadFirstDocumentPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadFirstDocumentPage.scala.html
@@ -20,7 +20,7 @@
 @import views.html.partials.errorManager
 @import models.upload.UpscanInitiateResponseModel
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         formHelper: FormWithCSRF,
         govukFileUpload: GovukFileUpload,
         button: components.button,
