--- a/app/views/reasonableExcuseJourneys/other/noJs/UploadListPage.scala.html
+++ b/app/views/reasonableExcuseJourneys/other/noJs/UploadListPage.scala.html
@@ -17,7 +17,7 @@
 @import config.AppConfig
 @import helpers.UpscanMessageHelper.getPluralOrSingular
 
-@this(layout: FrontendPageLayout,
+@this(layout: Layout,
         formHelper: FormWithCSRF,
         button: components.button,
         p: components.p,
