Prm 2655 removed compilation warnings (#484)
* PRM-2655 removed majority of warnings

* PRM-2655 removed conflicts

* PRM-2655 removed another warning

* PRM-2655 addressed some comments

* PRM-2655 made more minor changes

* PRM-2655-1 added some tests for exceptions

* PRM-2655-1 added some more tests for exceptions

* PRM-2655-1 rebased main and fixed conflicts

* PRM-2655-1 fixed test

* PRM-2655-1 dealing with latest comments

* PRM-2655-1 remove whitespace

Merged.

--- a/app/views/AppealConfirmationPage.scala.html
+++ b/app/views/AppealConfirmationPage.scala.html
@@ -31,6 +31,7 @@
         case (_, "yes") => messages("penaltyType.latePayment.multiple")
         case (PenaltyTypeEnum.Late_Submission, _) => messages("penaltyType.lateSubmission")
         case (PenaltyTypeEnum.Late_Payment | PenaltyTypeEnum.Additional, _) => messages("penaltyType.latePayment")
+        case _ => throw new MatchError(s"[AppealConfirmationPage][penaltyType] - unknown penaltyType $appealType")
     }
 }
 
