--- a/app/views/errors/ServiceUnavailablePage.scala.html
+++ b/app/views/errors/ServiceUnavailablePage.scala.html
@@ -20,7 +20,8 @@
 
 @layout(
     pageTitle = messages("serviceUnavailable.headingAndTitle"),
-    backLinkEnabled = false
+    backLinkEnabled = false,
+    isAuthorised = false
 ) {
     <h1 class="govuk-heading-l" id="page-heading">@messages("serviceUnavailable.headingAndTitle")</h1>
     <p class="govuk-body"> @messages("serviceUnavailable.p1")</p>
