--- a/app/views/errors/ProblemWithServicePage.scala.html
+++ b/app/views/errors/ProblemWithServicePage.scala.html
@@ -21,7 +21,8 @@
 @layout(
     pageTitle = messages("problemWithService.headingAndTitle"),
     isPageFullWidth = false,
-    backLinkEnabled = false
+    backLinkEnabled = false,
+    isAuthorised = false
 ) {
     <h1 class="govuk-heading-l" id="page-heading">@messages("problemWithService.headingAndTitle")</h1>
     <p class="govuk-body">@messages("serviceUnavailable.p1")</p>
