--- a/app/views/errors/ErrorTemplate.scala.html
+++ b/app/views/errors/ErrorTemplate.scala.html
@@ -18,7 +18,7 @@
 
 @this(layout: Layout)
 
-@(pageTitle: String, heading: String, message: String)(implicit userRequest: Request[_], messages: Messages, appConfig: AppConfig)
+@(pageTitle: String, heading: String, message: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 @layout(pageTitle = pageTitle, backLinkEnabled = false) {
     <h1 class="govuk-heading-l">@{Text(heading).asHtml}</h1>
     <p class="govuk-body">@{Text(message).asHtml}</p>
