--- a/app/views/errors/ServiceUnavailablePage.scala.html
+++ b/app/views/errors/ServiceUnavailablePage.scala.html
@@ -16,7 +16,7 @@
 
 @this(layout: Layout)
 
-@()(implicit userRequest: UserRequest[_], messages: Messages, appConfig: AppConfig)
+@()(implicit messages: Messages, appConfig: AppConfig, userRequest: UserRequest[_])
 
 @layout(
     pageTitle = messages("serviceUnavailable.headingAndTitle"),
@@ -34,4 +34,13 @@
         <br>
         @messages("common.address.3")
     </p>
+  <p class="govuk-body">
+    <a class="govuk-link" href="@{appConfig.penaltiesFrontendUrl}" id="penalties-link">
+    @if(userRequest.isAgent) {
+      @messages("agent.common.viewPenalties")
+    } else {
+      @messages("common.viewPenalties")
+    }
+    </a>
+  </p>
 }
